--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,6 @@
 
 en:
   hello: "Hello world"
+  notifications:
+    request_notification:
+      message: "Someone requested to rent out your listing at"
